# m-trans

./: .env.example  .gitignore  COMMIT_LOG.md  README.md  build.ps1  build.sh  m-trans.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: launcher.py  logging_config.py  main.py  model_downloads.py  models.py  pipeline.py  translation_cache.py  worker.py
config/: settings.py
dict/: galtransl_dict.txt  mit_glossary.txt  post_dict.txt  pre_dict.txt  sakura_dict.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ConfigPanel.tsx  FontSelector.tsx  GlossaryEditor.tsx  PositionCanvas.tsx  PositionOverlay.tsx  ResultViewer.tsx  TaskCard.tsx  TranslationEditor.tsx  UploadZone.tsx
frontend/src/hooks/: useTaskProgress.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Gallery.tsx  Glossaries.tsx  Home.tsx  Logs.tsx  Settings.tsx  TaskDetail.tsx  Tasks.tsx
glossaries/: default.json  default_gpt.txt
manga_translator/: __init__.py  config.py  glossary.py  manga_translator.py  polish.py
manga_translator/detection/: __init__.py
manga_translator/mask_refinement/: text_mask_utils.py
manga_translator/rendering/: __init__.py  line_break.py  text_render.py
manga_translator/translators/: __init__.py  chatgpt.py  google_direct.py  sakura.py
manga_translator/utils/: textblock.py
test/: manual_google_pipeline.py  manual_inpaint_only.py  test_api_e2e.py  test_line_break.py  test_translation.py
(+6 files in other folders)
