[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m-trans"
version = "0.1.0"
description = "Manga image translation engine — fork of manga-image-translator"
authors = []
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "GPL-3.0-only"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "pywebview>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["manga_translator", "app", "config"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 310


[tool.pylint]
disable = """
C,R,W,
c-extension-no-member
"""
additional-builtins = "display"
output-format = "colorized"
generated-members = ["torch.*", "cv2.*"]

[tool.pytest.ini_options]
addopts = "-ra -v -p no:faulthandler"
minversion = "6.0"
testpaths = ["test"]
